Added libraries and tests

--- a/DummyAPI.Tests/DummyAPI.Tests.csproj
+++ b/DummyAPI.Tests/DummyAPI.Tests.csproj
@@ -35,6 +35,12 @@
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="Moq">
+      <HintPath>..\packages\Moq.4.2.1402.2112\lib\net40\Moq.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
@@ -91,6 +97,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\DummyControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\ValuesControllerTest.cs" />
   </ItemGroup>
@@ -101,6 +108,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DummyAPI.Core\DummyAPI.Core.csproj">
+      <Project>{ade3bc0c-cba2-4dc9-a472-29d3ae43eb3c}</Project>
+      <Name>DummyAPI.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DummyAPI\DummyAPI.csproj">
       <Project>{D4027AAD-8726-4DFB-81A8-2997E3A1C4F8}</Project>
       <Name>DummyAPI</Name>
