--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\DummyAPI.Tests\packages.config" />
   <repository path="..\DummyAPI\packages.config" />
+  <repository path="..\UtilityLibrary.Tests\packages.config" />
 </repositories>
