--- a/DummyAPI/DummyAPI.csproj
+++ b/DummyAPI/DummyAPI.csproj
@@ -184,6 +184,8 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\Home\Features.cshtml" />
+    <Content Include="Views\Home\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DummyAPI.Core\DummyAPI.Core.csproj">
