Added ZeroClipboard for copying url to the clipboard

--- a/DummyAPI/DummyAPI.csproj
+++ b/DummyAPI/DummyAPI.csproj
@@ -444,6 +444,10 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\zeroclipboard\ServiceUrlCopy.js" />
+    <Content Include="Scripts\zeroclipboard\ZeroClipboard.js" />
+    <Content Include="Scripts\zeroclipboard\ZeroClipboard.min.js" />
+    <Content Include="Scripts\zeroclipboard\ZeroClipboard.swf" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
