Created directive to show the content type of the text

--- a/DummyAPI/DummyAPI.csproj
+++ b/DummyAPI/DummyAPI.csproj
@@ -170,7 +170,9 @@
     <Content Include="Scripts\angular.min.js" />
     <Content Include="Scripts\app\app.js" />
     <Content Include="Scripts\app\Controllers\CreateServiceController.js" />
+    <Content Include="Scripts\app\Directives\ContentTypeInfoStack.js" />
     <Content Include="Scripts\app\Directives\TextFormatValidationMessage.js" />
+    <Content Include="Scripts\app\Services\Validation\contentTypeValidator.js" />
     <Content Include="Scripts\app\Services\Validation\HttpBodyValidator.js" />
     <Content Include="Scripts\app\Services\Validation\JSONValidator.js" />
     <Content Include="Scripts\app\Services\WebServiceGenerator.js" />
@@ -451,6 +453,7 @@
     <Content Include="Scripts\zeroclipboard\ZeroClipboard.js" />
     <Content Include="Scripts\zeroclipboard\ZeroClipboard.min.js" />
     <Content Include="Scripts\zeroclipboard\ZeroClipboard.swf" />
+    <Content Include="ViewTemplates\ContentTypeInfoStack.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
