Added XML validation.
Deleted unused angular services

--- a/DummyAPI/DummyAPI.csproj
+++ b/DummyAPI/DummyAPI.csproj
@@ -173,8 +173,8 @@
     <Content Include="Scripts\app\Directives\ContentTypeInfoStack.js" />
     <Content Include="Scripts\app\Directives\TextFormatValidationMessage.js" />
     <Content Include="Scripts\app\Services\Validation\contentTypeValidator.js" />
-    <Content Include="Scripts\app\Services\Validation\HttpBodyValidator.js" />
     <Content Include="Scripts\app\Services\Validation\JSONValidator.js" />
+    <Content Include="Scripts\app\Services\Validation\XMLValidator.js" />
     <Content Include="Scripts\app\Services\WebServiceGenerator.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
