Added Parse for persistent data.  Need to revisit the DummyController.Get method and how we retrieve the data

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\DummyAPI.Core\packages.config" />
   <repository path="..\DummyAPI.Tests\packages.config" />
   <repository path="..\DummyAPI\packages.config" />
   <repository path="..\UtilityLibrary.Tests\packages.config" />
