Added editing capabilities

--- a/DummyAPI/DummyAPI.csproj
+++ b/DummyAPI/DummyAPI.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\DummyController.cs" />
+    <Compile Include="Controllers\EditController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
@@ -177,6 +178,7 @@
     <Content Include="Scripts\angular.min.js" />
     <Content Include="Scripts\app\app.js" />
     <Content Include="Scripts\app\Controllers\CreateServiceController.js" />
+    <Content Include="Scripts\app\Controllers\UpdateServiceController.js" />
     <Content Include="Scripts\app\Directives\ContentTypeInfoStack.js" />
     <Content Include="Scripts\app\Directives\TextFormatValidationMessage.js" />
     <Content Include="Scripts\app\Services\Validation\contentTypeValidator.js" />
@@ -480,6 +482,7 @@
     <Content Include="Views\Home\Features.cshtml" />
     <Content Include="Views\Home\Create.cshtml" />
     <Content Include="Scripts\version.json" />
+    <Content Include="Views\Edit\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DummyAPI.Core\DummyAPI.Core.csproj">
