--- a/DummyAPI.Core/DummyAPI.Core.csproj
+++ b/DummyAPI.Core/DummyAPI.Core.csproj
@@ -47,6 +47,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MockServices\IMockServiceStore.cs" />
+    <Compile Include="MockServices\MockService.cs" />
+    <Compile Include="MockServices\ParseServiceStore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Responses\IResponseRepository.cs" />
     <Compile Include="Responses\ParseResponseRepository.cs" />
