--- a/DummyAPI/DummyAPI.csproj
+++ b/DummyAPI/DummyAPI.csproj
@@ -183,10 +183,11 @@
     <Content Include="Scripts\angular.min.js" />
     <Content Include="Scripts\app\app.js" />
     <Content Include="Scripts\app\Controllers\CreateMockServiceController.js" />
-    <Content Include="Scripts\app\Controllers\CreateServiceController.js" />
+    <Content Include="Scripts\app\Controllers\EditServiceController.js" />
     <Content Include="Scripts\app\Controllers\UpdateServiceController.js" />
     <Content Include="Scripts\app\Directives\ContentTypeInfoStack1.js" />
     <Content Include="Scripts\app\Directives\ContentTypeStack.js" />
+    <Content Include="Scripts\app\Services\MockServiceRepository.js" />
     <Content Include="Scripts\app\Services\Validation\contentTypeValidator.js" />
     <Content Include="Scripts\app\Services\Validation\JSONValidator.js" />
     <Content Include="Scripts\app\Services\Validation\TestService.js" />
