--- a/DummyAPI/packages.config
+++ b/DummyAPI/packages.config
@@ -16,6 +16,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
+  <package id="MSBuild.Microsoft.VisualStudio.Web.targets" version="14.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
   <package id="Parse" version="1.2.14" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
