--- a/Restponder.Tests/packages.config
+++ b/Restponder.Tests/packages.config
@@ -2,12 +2,15 @@
 <packages>
   <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Moq" version="4.2.1402.2112" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
-  <package id="NUnit" version="2.6.3" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net452" />
+  <package id="NUnit" version="3.0.1" targetFramework="net452" />
+  <package id="Parse" version="1.7.0" targetFramework="net452" />
+  <package id="Shouldly" version="2.6.0" targetFramework="net452" />
 </packages>
